--- a/server/package.json
+++ b/server/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "server",
+  "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
   "scripts": {
-  "start": "node server.js",
-  "dev": "nodemon server.js"
-},
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -17,9 +17,10 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "express": "^5.1.0",
+    "express": "^4.21.2",
     "express-fileupload": "^1.5.1",
-    "mongoose": "^8.13.1",
+    "mongodb": "^6.15.0",
+    "mongoose": "^8.13.0",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0"
   }
