--- a/server/package.json
+++ b/server/package.json
@@ -25,5 +25,7 @@
     "mongoose": "^8.13.0",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0"
+    "nodemailer": "^6.10.0",
+    "nodemon": "^3.1.9"
   }
 }
