--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,40 @@
+# Node.js dependencies
 node_modules/
-npm-debug.log*
-logs
+client/node_modules/
+server/node_modules/
+
+# Logs
+logs/
 *.log
+npm-debug.log*
+yarn-debug.log*
+pnpm-debug.log*
+
+# Build outputs
 dist/
+dist-ssr/
 build/
 tmp/
-config/
+
+# Environment files
+.env
+*.env
+
+# Editor and system files
+.vscode/
+!.vscode/extensions.json
+.idea/
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Temporary files
+*.local
+*.tmp
+*.cache
+
+# Git-specific files
+.git/
