--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "formik": "^2.4.6",
     "lucide-react": "^0.469.0",
